# printfabulous

./: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  main.c  main.cc  main.cc~  main.c~  printer_hack  printer_message_editor
src/.deps/: main.Po
